# NeuralMic

./: .gitignore  CMakeLists.txt  README.md
include/Utils/: AudReader.h  MicReader.h
src/: main.cpp
src/Core/: OnnxInference.cpp  RealtimeDenoiser.cpp
src/Utils/: MicReader.cpp
